# LAGOS-2058

./: .gitignore  CHANGELOG.md  ITERATE_PROMPT.md  LAGOS_2058_Player_Rulebook.docx  README.md  _profile_lga.py  build_map.py  diagnostics.py  diagnostics_campaign.py  nigeria_lga_polsim_2058.xlsx  nigeria_lga_polsim_formatted.xlsx  nigeria_lga_polsim_formatted_fixed.xlsx  package-lock.json  pyproject.toml  run_api.py  run_campaign_test.py  seat_allocation.xlsx  voting_districts_summary.xlsx
.claude/: launch.json  settings.local.json
Audits/: anchor_data.json  audit_script.py  audit_structural.md  fix_changelog.md  fix_structural.py
GeoJSON/: district_info.json  zone_info.json
Projection Scripts/: add_noise.py  check_conflict.py  fix_remaining.py  fix_spreadsheet.py  simulate_2058.py  verify_problems.py
_rulebook_unpacked/: [Content_Types].xml
api/: main.py
data/: README.md
examples/: run_campaign.py  run_election.py  run_election_10party.py  run_election_24party.py  run_election_class_divide.py  run_election_ethnic_blocs.py  run_election_ethnic_federalism.py  run_election_generational.py  run_election_military_civilian.py  run_election_north_south.py  run_election_polarised.py  run_election_religious.py  run_election_urban_rural.py  run_election_wafta_crisis.py  run_election_youth_surge.py  run_full_campaign.py
frontend/: package-lock.json  package.json  vite.config.ts
scripts/: create_rulebook.js  generate_golden.py  run_diagnostic.py
tests/: test_affinity.py  test_calibration.py  test_campaign_integration.py  test_campaign_invariant.py  test_noise.py  (+10 more)
(+146 files in other folders)
